--- a/api/package.json
+++ b/api/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"json-server -p 3009 -w initialData.json"
+    "start":"nodemon --watch test/mock json-server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.15.1"
+    "json-server": "^0.15.1",
+    "lodash": ">=4.17.13"
   }
 }
