making edit popup

--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "react-semantic-ui-datepickers": "^2.7.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3003 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
