--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://yahorpadlucki.github.io/finn",
+  "homepage": "http://yahorpadlucki.github.io/finn",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "chart.js": "^2.9.3",
     "react": "^16.13.1",
     "react-color": "^2.18.1",
     "react-datepicker": "^2.16.0",
